# docker-synapse-server

./: .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pull_request.yml  push_to_main.yml
scripts/: init_certs.sh  synapse-entrypoint.sh
templates/: homeserver.yaml
