[project]
name = "synapse-dist"
version = "1.2.0+260611"
description = "Helper package to lock deps for building Synapse container"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.9",
    "matrix-synapse>=1.141.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "prek>=0.3.13",
]
